--- a/AndroidStudentClient/app/src/main/AndroidManifest.xml
+++ b/AndroidStudentClient/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:name=".SettingActivity"
             android:theme="@style/AppTheme"
             />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/FullScreenStyle"></activity>
     </application>
 
 </manifest>
